# bootstrapper

./: .actrc  .gitignore  Cargo.toml  README.md  ci-build.txt  sources.yaml
.circleci/: config.yml
.github/workflows/: rust.yml
bootstrapper-assemble/: Cargo.toml
bootstrapper-assemble/src/: args.rs  assemble.rs  drivers.rs  lib.rs  tar.rs
bootstrapper-assemble/src/drivers/: buildkit.rs  docker.rs
bootstrapper-common/: Cargo.toml
bootstrapper-common/src/: helpers.rs  lib.rs  recipe.rs
bootstrapper-info/: Cargo.toml
recipes/live-bootstrap/: autoconf.yaml  automake.yaml  bash.yaml  binutils.yaml  bison.yaml  bzip2.yaml  checksum-transcriber.yaml  coreutils.yaml  diffutils.yaml  env  findutils.yaml  flex.yaml  gawk.yaml  gcc.yaml  grep.yaml  gzip.yaml  heirloom-devtools.yaml  help2man.yaml  improvements.yaml  libtool.yaml  linux-headers.yaml  m4.yaml  make.yaml  mes.yaml  musl.yaml  patch.yaml  perl.yaml  sed.yaml  simple-patch.yaml  tar.yaml  tcc.yaml
recipes/stage0-posix/: final.yaml
recipes/stage0-posix/mescc-tools-extra/: checksum.yaml  mescc-tools-extra.yaml
recipes/stage0-posix/mescc-tools-full-kaem/: blood-elf.yaml  get_machine.yaml  m2-mesoplanet.yaml  m2-planet.yaml
recipes/stage0-posix/mescc-tools-mini-kaem/: blood-elf.yaml  catm.yaml  cc_x86.yaml  hex1.yaml  hex2.yaml  kaem.yaml  m0.yaml  m1.yaml  m2-planet.yaml
recipes/stage0-posix/mescc-tools-seed-kaem/: hex0.yaml  kaem.yaml
recipes/sysa/bash/: autoconf.yaml  automake.yaml  bison.yaml  bzip2.yaml  coreutils.yaml  diffutils.yaml  env  flex.yaml  gawk.yaml  grep.yaml  help2man.yaml  libtool.yaml  m4.yaml  musl.yaml  perl.yaml  sed.yaml  setup.yaml  tcc.yaml
recipes/sysa/bash2/: automake.yaml  bc.yaml  binutils.yaml  dhcpcd.yaml  e2fsprogs.yaml  ed.yaml  env  findutils.yaml  gcc.yaml  kbd.yaml  linux-headers.yaml  make.yaml  musl.yaml  tcc.yaml  util-linux.yaml
recipes/sysa/kaem/: bash.yaml  bzip2.yaml  checksum-transcriber.yaml  coreutils.yaml  gzip.yaml  heirloom-devtools.yaml  make.yaml  mes.yaml  patch.yaml  sed.yaml  setup.yaml  simple-patch.yaml  tar.yaml  tcc.yaml
recipes/sysc/: autoconf-archive.yaml  bash.yaml  bison.yaml  ca-certificates.yaml  coreutils.yaml  curl.yaml  dist.yaml  env  file.yaml  flex.yaml  gmp.yaml  libarchive.yaml  libtool.yaml  make.yaml  mpc.yaml  mpfr.yaml  openssl.yaml  perl.yaml  pkg-config.yaml  setup.yaml  tar.yaml  xz.yaml
recipes/sysc/perl/5.32.1/tmp/: Config.pm  Config_heavy.pl
src/: helpers.rs  lib.rs
