[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Dockerfile generator that assembles a linux distribution from scratch"
repository = "https://github.com/chordtoll/bootstrapper"

[dependencies]
async-recursion = "1.0.5"
copy_dir = "0.1.3"
flate2 = "1.0.27"
futures-util = "0.3.28"
glob = "0.3.1"
indexmap = "2.0.2"
indicatif = "0.17.7"
mktemp = "0.5.1"
petgraph = "0.6.4"
reqwest = { version = "0.11.20", features = ["blocking", "stream"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
sha256 = "1.4.0"
shlex = "1.1.0"
tar = "0.4.40"
tokio = { version = "1.32.0", features = ["macros"] }
zip-extract = "0.1.2"
