[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Dockerfile generator that assembles a linux distribution from scratch"
repository = "https://github.com/chordtoll/bootstrapper"

[dependencies]
async-recursion = "1.0.5"
copy_dir = "0.1.3"
flate2 = { default-features = false, version = "1.0.27" }
futures-util = { default-features = false, version = "0.3.28" }
glob = "0.3.1"
indexmap = { default-features = false, version = "2.0.2" }
indicatif = { default-features = false, version = "0.17.7" }
mktemp = "0.5.1"
petgraph = { default-features = false, version = "0.6.4" }
reqwest = { version = "0.11.20", features = ["blocking", "stream", "default-tls"], default-features = false }
serde = { version = "1.0.189", features = ["serde_derive"], default-features = false }
serde_yaml = "0.9.25"
sha256 = { default-features = false, version = "1.4.0" }
shlex = { default-features = false, version = "1.2.0" }
tar = { default-features = false, version = "0.4.40" }
tokio = { version = "1.35.0", features = ["macros"], default-features = false }
zip-extract = { default-features = false, version = "0.1.2" }
