[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Dockerfile generator that assembles a linux distribution from scratch"
repository = "https://github.com/chordtoll/bootstrapper"

[dependencies]
async-recursion = { version = "1.0.5", optional = true }
copy_dir = { version = "0.1.3", optional = true }
flate2 = { default-features = false, version = "1.0.27", optional = true }
futures-util = { default-features = false, version = "0.3.30", optional = true }
glob = { version = "0.3.1", optional = true }
indexmap = { default-features = false, version = "2.1.0", optional = true }
indicatif = { default-features = false, version = "0.17.7", optional = true }
mktemp = { version = "0.5.1", optional = true }
petgraph = { default-features = false, version = "0.6.4", optional = true }
reqwest = { version = "0.11.23", features = ["blocking", "stream", "default-tls"], default-features = false, optional = true }
serde = { version = "1.0.196", features = ["serde_derive"], default-features = false }
serde_yaml = { version = "0.9.30" }
sha256 = { default-features = false, version = "1.5.0", optional = true }
shlex = { default-features = false, version = "1.3.0", optional = true }
tar = { default-features = false, version = "0.4.40", optional = true }
tokio = { version = "1.35.1", features = ["macros"], default-features = false, optional = true }
zip-extract = { default-features = false, version = "0.1.2", optional = true }

[[bin]]
name = "assemble"
required-features = ["assemble"]

[[bin]]
name = "depgraph"
required-features = ["depgraph"]

[[bin]]
name = "deplist"
required-features = ["deplist"]

[features]
depgraph = ["glob"]
assemble = ["reqwest","indexmap","futures-util","indicatif","shlex","copy_dir","zip-extract","async-recursion","tokio","flate2","sha256","mktemp","tar"]
deplist = ["petgraph","glob"]
