[package]
name = "bootstrapper-assemble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
bootstrapper-common = { version = "0.1.0", path = "../bootstrapper-common" }
flate2 = "1.0.28"
indexmap = "2.1.0"
indicatif = "0.17.7"
serde_yaml = "0.9.30"
sha256 = "1.5.0"
shlex = "1.2.0"
tar = "0.4.40"
tokio = { version = "1.35.1", features = ["tokio-macros", "macros", "rt-multi-thread"] }
futures-util = "0.3.30"
glob = "0.3.1"
petgraph = "0.6.4"
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
bollard = { version = "0.15.0", features = ["buildkit"], git = "https://github.com/fussybeaver/bollard" }
clap = { version = "4.4.18", features = ["derive"] }
bytes = "1.5.0"
zip = "0.6.6"
memoize = "0.4.2"
walkdir = "2.4.0"
bzip2 = "0.4.4"
maplit = "1.0.2"
path-clean = "1.0.1"
