[package]
name = "bootstrapper-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
indexmap = "2.2.6"
lazy_static = "1.4.0"
lockfree = "0.5.1"
memoize = "0.4.2"
petgraph = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
sha256 = "1.5.0"
